--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -62,16 +63,46 @@ a:active {
 
 .herotext {
     background-color: #1F2937;
-    color: 
+    color: #E5E7EB;
     display: flex;
-    margin: 1em;
-    padding: 20px;
+    flex-direction: column;
+    align-items: flex-start;
 }
+
+.heading,
+.herop,
+.signup {
+    flex: 1
+}
+
+.signup {
+    background-color: #3882E6;
+    color: #FFFFFF;
+    width: 100px;
+    height: 5px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.herop {
+    font-size: 18px;
+}
+
+.heading {
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
 
 .heroimage {
     content: 100px;
     margin: 1em;
-    padding: 75px;
-    background-color: gray;
+    height: 200px
+    width: 1000px;
+    padding: 150px;
+    background-color: #6D747D;
     color: white;
 }
