--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,22 +70,58 @@ a:active {
 }
 
 .heading,
-.herop,
-.signup {
+.herop {
     flex: 1
 }
 
 .signup {
     background-color: #3882E6;
     color: #FFFFFF;
-    width: 100px;
-    height: 5px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-}
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    color: #fff;
+    font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 3px 30px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+  
+  .button-3:focus:not(:focus-visible):not(.focus-visible) {
+    box-shadow: none;
+    outline: none;
+  }
+  
+  .button-3:hover {
+    background-color: #4280d1;
+  }
+  
+  .button-3:focus {
+    box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+    outline: none;
+  }
+  
+  .button-3:disabled {
+    background-color: #125ec2;
+    border-color: rgba(27, 31, 35, .1);
+    color: rgba(255, 255, 255, .8);
+    cursor: default;
+  }
+  
+  .button-3:active {
+    background-color: #298e46;
+    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+  }
 
 .herop {
     font-size: 18px;
@@ -93,7 +129,8 @@ a:active {
 
 .heading {
     font-size: 48px;
-    color: #F9FAF8;
+    font-style: #F9FAF8;
+    font-weight: bold;
 }
 
 
