--- a/stylesheet.css
+++ b/stylesheet.css
@@ -248,7 +248,7 @@ a:active {
   flex: 1;
   border-color: #3882F6;
   border-radius: 5px;
-  border-size: 1px;
+  border: 3px;
 }
 
 .quote {
@@ -282,14 +282,14 @@ a:active {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    border: 1px solid rgba(233, 235, 238, 0.15);
+    border: 2px solid rgba(233, 235, 238, 0.15);
     border-radius: 6px;
     box-shadow: rgba(233, 236, 240, 0.1) 0 1px 0;
     font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     font-size: 14px;
     font-weight: 600;
-    line-height: 20px;
-    padding: 3px 30px;
+    line-height: 15px;
+    padding: 15px 30px;
     position: relative;
     user-select: none;
     -webkit-user-select: none;
@@ -310,9 +310,10 @@ a:active {
   color: #FFFFFF;
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding: 40px;
+  border-radius: 6px;
 }
 
 .CTA {
