edit banner button

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -312,14 +312,17 @@ img {
     font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     font-size: 14px;
     font-weight: 600;
-    line-height: 15px;
+    line-height: 5px;
     padding: 15px 30px;
     position: relative;
     user-select: none;
+    margin-left: 4em;
     -webkit-user-select: none;
     touch-action: manipulation;
     vertical-align: middle;
     white-space: nowrap;
+    width: 120px;
+    height: 35px;
 }
 
 .block4 {
